change the name of the charts

--- a/www/elements/element-profit-chart.html
+++ b/www/elements/element-profit-chart.html
@@ -79,7 +79,7 @@
 
                 var chart = Highcharts.chart(this.$.idProfitBinance, {
                     title: {
-                        text: '币安日收益走势图'
+                        text: 'USDT现货余额走势图'
                     },
                     xAxis:{
                         categories: times,
@@ -145,7 +145,7 @@
 
                 var chart = Highcharts.chart(this.$.idProfitOkex, {
                     title: {
-                        text: 'OKEX日收益走势图'
+                        text: '合约ETH资金余额走势图'
                     },
                     xAxis:{
                         categories: times,
